# iu-dsp

./: .gitignore  README.md  pyproject.toml
hw01/: [DSP]_Lab01.ipynb
hw02/: [DSP]_Lab02.ipynb  [DSP]_Lab02_train.ipynb
hw02/Artem_Chernitsa/: fingerprint.pb  keras_metadata.pb  saved_model.pb
hw02/Artem_Chernitsa/variables/: variables.index
hw02/task/: train.ipynb
hw04/: README.md  solution.ipynb  test.ipynb  to_spectrograms.ipynb
