[tool.poetry]
name = "dsp"
version = "0.1.0"
description = ""
authors = ["aalexren <chernicaar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter = "^1.0.0"
numpy = ">=1.22,<1.24"
matplotlib = "^3.7.0"
scipy = "^1.10.1"
tensorflow-cpu = "^2.12.0"
opencv-python = "^4.7.0.72"
tqdm = "^4.65.0"
multiprocess = "^0.70.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
